tests/NormalTests/paczka1/fuzzy1/51202070.err
Error in line 4: e5JZgraFexy S133 29,5
Error in line 8: hciUyj 505 16,3
Error in line 7: e5JZgraFexy S676 70,1
Error in line 12: VDjmyo9U S210 36,80
Error in line 22: sLRR S133 21,7
Error in line 33: A505 A505 12,76
Error in line 23: A505 S676 829,6
